fix services spacing

--- a/src/pages/Homepage/Services/Services.css
+++ b/src/pages/Homepage/Services/Services.css
@@ -1,3 +1,9 @@
+.services {
+    @media (min-width: 950px) {
+        margin-block-end: 4vw
+    }
+}
+
 .servicesInfo {
     @media (min-width: 950px) {
         display: flex;
